--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -28,4 +29,12 @@ code {
   margin-top: -1px;
   padding: 0;
   text-align: center;
+  outline: none;
+  float: left;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
 }
